--- a/frontend/online-learning-platform/src/index.css
+++ b/frontend/online-learning-platform/src/index.css
@@ -1,3 +1,22 @@
+@font-face {
+  font-family: 'BNazanin';
+  src: url('./fonts/BNazanin.ttf') format('woff2'),
+       url('./fonts/BNazanin.woff') format('woff'),
+       url('./fonts/BNazanin.woff2') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'BNazaninBd';
+  src: url('./fonts/BNaznnBd.ttf') format('woff2'),
+       url('./fonts/BNaznnBd.woff') format('woff'),
+       url('./fonts/BNaznnBd.woff2') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +24,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #EBEBEB;
+  font-family: 'BNazanin', sans-serif;
+
 }
 
 code {
